static/css/style.css
/* RESET */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  background-color: rgba(105, 105, 105, 0.06);
  line-height: 1;
  -webkit-text-size-adjust: none;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Z-index's Index
  #header:999
  *.held:9999
  .post-link-img
    .post-link-img:1
    .post-link-overlay:2
    .post-link-text-container:3

*/

/* CONFIGURATION CSS */
html{
  font-family: 'Open Sans';
  font-size: 14px;
  min-width: 250px;
  overflow-x: hidden;
  position: relative;
}

*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
/* OBJECT ORIENTED CSS */

.feature{
  padding-bottom: 16px;
}
.full-screen-feature{
  transform: translate(-24px, 0);
}

.centered{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.blue{
  color: #4676B6;
}

.hidden{
  max-height: 0;
}

.clearfix{
  content:"";
  display: table;
  clear:both;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.pressed{
  background-color: #4676B6 !important;
  color: white !important;
}

.card{
  border-radius: 2px;

  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
          box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.card-2{
  border-radius: 2px;

  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     -moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
          box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.card-hover{
  border-radius: 2px;

  -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !important;
     -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !important;
          box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !important;
}

/* JQUERY Specific */
.post-transition{
  transition: transform .2s !important;
}

.held{
  opacity:  0.95;
  z-index:  9999 !important;
}

/* MAIN CSS */

#header{
  background-color:      white;
  height:                78px;
  line-height:           78px;
  padding:               0 15px;
  position:              relative;
  width:                 100%;
  z-index:               999;
  }
  #header-overlay{
    background-color: rgba(0, 0, 0, 0.64);
    height:           100%;
    position:         absolute;
      left:           0;
      top:            0;
    width:            100%;
  }
  #logo{
    float:       left;
    position:    relative;
    font-size:   18px;
    }
    #logo-img{
      height:       30px;
      position:     relative;
      top:          7px;
      margin-right: 5px;
  }

  #header-hashtag{
    float:         right;
    font-size:     16px;
    overflow:      hidden;
    position:      relative;
    text-align:    right;
    text-overflow: ellipsis;
    width:         150px;

}/* ##header */

#actions-container{
  height:   100vh;
  opacity: 0.8;
  position: fixed;
    left: 0;
    top:  0;
  width:    100vw;

  -webkit-transition: opacity .5s;
     -moz-transition: opacity .5s;
          transition: opacity .5s;  
  }
  #bg-1{
    background-color: #0BD00B;
    height:           100%;
    opacity:          0;
    position:         absolute;
    width:            100%;
  }
  #bg-2{
    background-color: red;
    height:           100%;
    opacity:          0;
    position:         absolute;
    width:            100%;
}

.posts-container{
  display:    inline-block;
  overflow-x: hidden;
  padding:    8px 0;
  position:   relative;
  width:      100%;
  }

  .post-container{
    margin: 0 8px 16px;
    position:      relative;
    transition:    opacity .2s;
  }

  .post{
    
    background-color: white;
    font-size:     14px;
    position:      relative;
    transition:    transform .2s, box-shadow .2s, max-height 2s;

    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-touch-callout:       none;
    -webkit-user-select:         none;   
    }

    .post-header{
      /*background: -moz-linear-gradient(-45deg, rgba(255,255,255,0) 0%, rgba(169,234,173,0) 90%, rgba(15,196,27,1) 100%);
        background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(90%, rgba(169,234,173,0)), color-stop(100%, rgba(15,196,27,1)));
        background: -webkit-linear-gradient(-45deg, rgba(255,255,255,0) 0%, rgba(169,234,173,0) 90%, rgba(15,196,27,1) 100%);
        background: -o-linear-gradient(-45deg, rgba(255,255,255,0) 0%, rgba(169,234,173,0) 90%, rgba(15,196,27,1) 100%);
        background: -ms-linear-gradient(-45deg, rgba(255,255,255,0) 0%, rgba(169,234,173,0) 90%, rgba(15,196,27,1) 100%);
        background: linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(169,234,173,0) 90%, rgba(15,196,27,1) 100%);*/
      max-height:       60px;
      overflow:         hidden;
      padding:          16px;
      }

      .post-user-img-container{
        display: block;
        float: left;
        max-height: 30px;
        }

        .post-user-img{
          border-radius: 50%;
          height: 28px;
      }

      .post-credentials{
          float:       left;
          max-height:  28px;
          width: 70%;
          transform: translate(8px,7px);

        }

        .post-username{
          font-size: 11px;
          height: 15px;
        }
        .post-hashtag{
          font-size: 11px;
          height: 18px;
      }

      .post-share-container{
          float: right;
        }

        .post-share-button-img{
          height: 28px;
    } /* #.post-header */

    .post-content{
      padding: 0 16px;
      }

      .post-img-container{
        position: relative;
        width: 100vw;
        }

        .post-img{
          display: block;
          width: 100%;
      } /* #.post-img-container */

      .post-video-container > iframe{
        width: 100%;
      }
      .post-video-container{
        background-color: black;
        margin-bottom:    16px;
        padding:          10px 0;
        position:         relative;
        width:            100vw;
        }
        .scraper-jquery{
          position: relative;
          min-height: 180px;
        }
        .post-video-layer{
          display: none;
          height: 100%;
          position: absolute;
            left: 0;
            top: 0;
          width: 100%;
      } /* #.post-video-container */

      .post-link-anchor{
        position: relative;
        width: 100%;
        }
        .post-link-anchor:link, .post-link-anchor:visited, .post-link-anchor:hover, .post-link-anchor:active{
          text-decoration: none;
      } /* #.post-link-anchor */

      .post-link-container{
        color:         white;
        height:        220px;
        overflow:      hidden;
        padding:       15px;
        position:      relative;
        width:         100vw;
        }
        .post-link-img{
          background-size: cover;
          background-position: center;
          height: 100%;
          position: absolute;
            left: 0;
            top: 0;
            z-index: 1;
          width: 100%;
        }
        .post-link-overlay{
          background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.7) 10%, rgba(0,0,0,0.35) 30%, rgba(73,73,73,0) 50%, rgba(255,255,255,0) 100%);
          background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,1)), color-stop(10%, rgba(0,0,0,0.7)), color-stop(30%, rgba(0,0,0,0.35)), color-stop(50%, rgba(73,73,73,0)), color-stop(100%, rgba(255,255,255,0)));
          background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.7) 10%, rgba(0,0,0,0.35) 30%, rgba(73,73,73,0) 50%, rgba(255,255,255,0) 100%);
          background: -o-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.7) 10%, rgba(0,0,0,0.35) 30%, rgba(73,73,73,0) 50%, rgba(255,255,255,0) 100%);
          background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.7) 10%, rgba(0,0,0,0.35) 30%, rgba(73,73,73,0) 50%, rgba(255,255,255,0) 100%);
          background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.7) 10%, rgba(0,0,0,0.35) 30%, rgba(73,73,73,0) 50%, rgba(255,255,255,0) 100%);
          height: 100%;
          position: absolute;
            left: 0;
            top: 0;
            z-index: 2;
          width: 100%;
        }
        .post-link-text-container{
          height:   100%;
          position: relative;
            z-index: 3;
          width:    100%;
        }
        .post-link-title{
          display: -webkit-box;
          font-size: 1.5em;
          font-family: "Roboto";
          line-height: 1.2;
          overflow: hidden;

          -webkit-box-orient: vertical;
          -webkit-line-clamp: 3;
        }
        .post-link-description{
          display: -webkit-box;
          font-size: 12px;
          line-height: 20px;
          overflow: hidden;
          padding-top: 15px;
          width: 90%;

          -webkit-box-orient: vertical;
          -webkit-line-clamp: 3;
        }
        .post-link-click{
          font-size:   15px;
            font-family: "Roboto";
            font-weight: 400;
          position:    absolute;
            bottom: 0px;
      } /* #.post-link-container */

      .post-text-container{
        word-break: break-word;
        }
        .post-text-title{
          font-size: 24px;
          font-family: "Roboto";
          padding-bottom: 16px;
          line-height: 1.2;
        }
        .post-text-body{
          font-size: 14px;
          line-height: 1.5;
          padding-bottom: 16px;
          padding: 30px;
    }/* #.post-text-container #.post-content */

    .related-container{
      font-size:        12px;
      font-weight:    bold;
      overflow:         hidden;
      padding:          0 12px 16px;
      }
      .related:link, .related:visited, .related:hover, .related:active{
        color:           #4676B6;
        text-decoration: none;
      }
      .related{
        border:           solid 2px #4676B6;
        border-radius:  4px;
        display:          inline-block;
        margin:           10px 5px 0px;
        max-width:        280px;
        padding:          10px;

        /*-webkit-box-shadow: 0px 0px 1px 0px #4676B6;
           -moz-box-shadow: 0px 0px 1px 0px #4676B6;
                box-shadow: 0px 0px 1px 0px #4676B6;*/

  }/* #.post */
    

